init read retorno
